Create visitor generator for FIR

--- a/settings.gradle
+++ b/settings.gradle
@@ -29,6 +29,7 @@ include ":kotlin-build-common",
         ":compiler:serialization",
         ":compiler:psi",
         ":compiler:fir:tree",
+        ":compiler:fir:tree:visitors-generator",
         ":compiler:fir:psi2fir",
         ":compiler:frontend",
         ":compiler:frontend.java",
