--- a/idea/src/META-INF/plugin.xml
+++ b/idea/src/META-INF/plugin.xml
@@ -178,6 +178,9 @@ The Kotlin plugin provides language support in IntelliJ IDEA and Android Studio.
 
         <action id="KotlinFormattingSettingsStatusAction" class="org.jetbrains.kotlin.idea.actions.internal.KotlinFormattingSettingsStatusAction"
                 text="Formatter settings info"/>
+
+        <action id="ShowFirAction" class="org.jetbrains.kotlin.idea.actions.internal.ShowFirAction"
+                text="Show RAW FIR Explorer"/>
       </group>
       <separator/>
 
