--- a/settings.gradle
+++ b/settings.gradle
@@ -31,6 +31,7 @@ include ":kotlin-build-common",
         ":compiler:fir:tree",
         ":compiler:fir:tree:visitors-generator",
         ":compiler:fir:psi2fir",
+        ":compiler:fir:resolve",
         ":compiler:frontend",
         ":compiler:frontend.java",
         ":compiler:frontend.script",
