--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,7 @@ include ":kotlin-build-common",
         ":compiler:resolution",
         ":compiler:serialization",
         ":compiler:psi",
+        ":compiler:fir:cones",
         ":compiler:fir:tree",
         ":compiler:fir:tree:visitors-generator",
         ":compiler:fir:psi2fir",
