--- a/libraries/tools/kotlin-gradle-plugin-api/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin-api/build.gradle
@@ -6,7 +6,7 @@ configureJvmProject(project)
 configurePublishing(project)
 
 repositories {
-    mavenLocal()
+    jcenter()
 }
 
 pill {
@@ -15,7 +15,9 @@ pill {
 
 dependencies {
     compile project(':kotlin-stdlib')
-    
+
+    compile 'org.jetbrains.kotlin:kotlin-native-utils:0.8.1'
+
     compileOnly gradleApi()
     compileOnly 'com.android.tools.build:gradle:0.4.2'
 }
