--- a/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/new-mpp-lib-and-app/sample-app/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/new-mpp-lib-and-app/sample-app/build.gradle
@@ -58,6 +58,13 @@ kotlin {
              }
         }
         fromPreset(presets.js, 'nodeJs')
+        fromPreset(presets.wasm32, 'wasm32')
+        fromPreset(presets.linuxX64, 'linux64')
+        fromPreset(presets.mingwX64, 'mingw64')
+
+        configure([wasm32, linux64, mingw64]) {
+            compilations.main.outputKinds += org.jetbrains.kotlin.gradle.plugin.mpp.NativeOutputKind.EXECUTABLE
+        }
     }
 }
 
