--- a/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/new-mpp-lib-and-app/sample-lib/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/new-mpp-lib-and-app/sample-lib/build.gradle
@@ -27,7 +27,16 @@ kotlin {
         fromPreset(presets.linuxX64, 'linux64')
         fromPreset(presets.mingwX64, 'mingw64')
         fromPreset(presets.macosX64, 'macos64')
+
+        all {
+            mavenPublication {
+                pom.withXml {
+                    asNode().appendNode('name', 'Sample MPP library')
+                }
+            }
+        }
     }
+
     sourceSets {
         jvm6Main {
             dependencies {
