Add enable / disable feature in JPS
#KT-26775 Fixed
#KT-26774 Fixed

(cherry picked from commit f6b805a973cd35eef695efdc8f985b7befc75371)

--- a/idea/testData/gradle/configurator/enableFeatureSupportToExistentArguments/build.gradle
+++ b/idea/testData/gradle/configurator/enableFeatureSupportToExistentArguments/build.gradle
@@ -19,6 +19,6 @@ dependencies {
 }
 compileKotlin {
     kotlinOptions {
-        freeCompilerArgs = ["-XXLanguage:+SamConversionForKotlinFunctions"]
+        freeCompilerArgs = ["-XXLanguage:+SamConversionForKotlinFunctions"] // Free compiler arguments
     }
 }
